// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Discover component should be rendered correctly with apps 1`] = `
<div
  className="sto-discover"
>
  <div>
    <h2
      className="sto-discover-title"
    >
      Discover
    </h2>
    <div
      className="sto-discover-get-started"
    >
      <h3
        className="sto-discover-get-started-title"
      >
        Get started with Cozy
      </h3>
      <div
        className="sto-discover-get-started-list"
      >
        <SmallAppItem
          developer={
            Object {
              "name": "Cozy",
            }
          }
          editor="Cozy"
          icon="<svg></svg>"
          installed={true}
          name="Collect"
          onClick={[Function]}
          slug="collect"
          version="3.0.0"
        />
        <SmallAppItem
          developer={
            Object {
              "name": "Cozy",
            }
          }
          editor=""
          icon="<svg></svg>"
          installed={undefined}
          name="Trinlane"
          onClick={[Function]}
          slug="konnector-trinlane"
          version="0.1.0"
        />
        <SmallAppItem
          developer={
            Object {
              "name": "Cozy",
            }
          }
          editor="Cozy"
          icon="<svg></svg>"
          installed={undefined}
          name="Photos"
          onClick={[Function]}
          slug="photos"
          version="3.0.0"
        />
        <SmallAppItem
          developer={Object {}}
          editor=""
          icon="<svg></svg>"
          installed={undefined}
          name="Tasky"
          onClick={[Function]}
          slug="tasky"
          version="1.0.0"
        />
      </div>
    </div>
  </div>
  <withRouter(ApplicationRouting)
    actionError={null}
    apps={
      Array [
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Trinlane",
          "slug": "konnector-trinlane",
          "type": "konnector",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "slug": "photos",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "1.0.0",
            ],
            "dev": Array [
              "1.0.0",
            ],
            "stable": Array [
              "1.0.0",
            ],
          },
        },
      ]
    }
    installApp={undefined}
    isFetching={false}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
</div>
`;

exports[`Discover component should display error from props correctly 1`] = `
<div
  className="sto-discover"
>
  <div>
    <h2
      className="sto-discover-title"
    >
      Discover
    </h2>
    <div
      className="sto-discover-get-started"
    >
      <h3
        className="sto-discover-get-started-title"
      >
        Get started with Cozy
      </h3>
      <div
        className="sto-discover-get-started-list"
      >
        <p
          className="u-error"
        >
          This is a test error
        </p>
      </div>
    </div>
  </div>
  <withRouter(ApplicationRouting)
    actionError={null}
    apps={Array []}
    installApp={undefined}
    isFetching={false}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
</div>
`;

exports[`Discover component should not render apps list if !match.isExact 1`] = `
<div
  className="sto-discover"
>
  <withRouter(ApplicationRouting)
    actionError={null}
    apps={
      Array [
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Collect",
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Trinlane",
          "slug": "konnector-trinlane",
          "type": "konnector",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Photos",
          "slug": "photos",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "icon": "<svg></svg>",
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "1.0.0",
            ],
            "dev": Array [
              "1.0.0",
            ],
            "stable": Array [
              "1.0.0",
            ],
          },
        },
      ]
    }
    installApp={undefined}
    isFetching={false}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
</div>
`;

exports[`Discover component should render correctly a spinner if apps is fetching 1`] = `
<div
  className="sto-discover"
>
  <div>
    <h2
      className="sto-discover-title"
    >
      Discover
    </h2>
    <div
      className="sto-discover-get-started"
    >
      <h3
        className="sto-discover-get-started-title"
      >
        Get started with Cozy
      </h3>
      <div
        className="sto-discover-get-started-list"
      />
    </div>
  </div>
  <withRouter(ApplicationRouting)
    actionError={null}
    apps={Array []}
    installApp={undefined}
    isFetching={true}
    isInstalling={undefined}
    parent="discover"
    uninstallApp={undefined}
  />
  <Wrapper
    loadingType="appsFetching"
    middle="true"
    size="xxlarge"
  />
</div>
`;
